# Celeste

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Celeste.vcxproj  Game.cpp  Game.h  Input.cpp  Input.h  Level.cpp  Level.h  Platform.h  Player.cpp  Player.h  README.md  Render.cpp  Render.h  Sprite.cpp  Sprite.h  Tilemap.cpp  Tilemap.h  assets.cpp  assets.h  easyxpng.h  main.cpp  math.h  未命名.tiled-session
Celeste/src/: easyXPng.h  game.cpp  main.cpp  platform.h  render_interface.h  renderer.cpp  renderer.h  schnitzel_lib.h  shader_header.h  win32_platform.cpp  win32_platform.h
assets/map/: level1..tmj  level1.tmj  level2new.tmj
assets/map/level1/: backgrounds.json  platforms.json
assets/map/level2/: platforms.json
assets/maps/: idle.tsj  jump_rising.tsj  level1.tmj  level2.tmj  level2_1.tmj  madeline.tsj  spring.tmj  spring_long.tsj  wall_climb.tsj
assets/sprites/effects/: dash_move_horizontal.json  dash_move_up.json  dash_up.json  death.json  jump_dust.json  landing_dust.json  respawn.json
assets/tiles/: bricks.tsj  house.tsj  madeline.tsj  player_atlas.tsj  scaffolds.tsj  snowTiles.tsj  snowTiles1.tsj
assets/tiles/spikes/: spikeFloor.tsj
